syntax = "proto3";
option java_package = "buildingdata";
message PeopleCountRequest {
    string studentID = 1;
}

message PeopleCountResponse {
    string buildingName = 1;
    int32 currentPeopleNumber = 2;
}

message AirQualityRequest {
    string roomID = 1;
}

message AirQualityResponse {
    int32 airQualityIndex = 1;
}

message SmokeAlarmRequest {
    string roomID = 1;
}

message SmokeAlarmResponse {
    string status = 1;
}

service BuildingDataCheck {
    rpc CheckPeopleCount(PeopleCountRequest) returns (PeopleCountResponse);
    rpc CheckAirQuality(AirQualityRequest) returns (AirQualityResponse);
    rpc SmokeAlarm(SmokeAlarmRequest) returns (stream SmokeAlarmResponse);
}